Menu + Header + Footer

--- a/problemes_causes_par_ia.html
+++ b/problemes_causes_par_ia.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/mescss/layout.css"/>
     <link rel="stylesheet" href="css/mescss/menu.css"/>
     <link rel="stylesheet" href="css/mescss/headerfooter.css"/>
-    <title>Accueil</title>
+    <title>Problèmes causés par l'IA</title>
 </head>
 <body class=" ">
 <header>
