--- a/homme_en_armure.html
+++ b/homme_en_armure.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/mescss/layout.css"/>
     <link rel="stylesheet" href="css/mescss/menu.css"/>
     <link rel="stylesheet" href="css/mescss/headerfooter.css"/>
-    <title>Accueil</title>
+    <title>Homme en armure</title>
 </head>
 <body class=" ">
 <header>
