--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="index">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/mescss/layout.css"/>
     <link rel="stylesheet" href="css/mescss/menu.css"/>
     <link rel="stylesheet" href="css/mescss/headerfooter.css"/>
+    <script src="https://kit.fontawesome.com/d26af3dc37.js" crossorigin="anonymous"></script>
     <title>Accueil</title>
 </head>
 <body class=" ">
@@ -32,22 +33,44 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="autres_projets.html">Autres Projets</a></li>
         </ul>
-        <a href="http://mmimontbeliard.com/"><img class="mmi" src="img/MMi-logo.png" alt="Logo MMI Montbéliard"></a>
+        <a href="http://mmimontbeliard.com/" class="ammi"><img class="mmi" src="img/MMi-logo.png" alt="Logo MMI Montbéliard"></a>
     </nav>
 </header>
 <main>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molest</p>
+    <img src="img/ironmanindex.jpg" alt="Background Iron Man" class="ironmanbg">
+    <div class="debut" id="debut"></div>
+    <h3>Changer le monde avec un bout de métal</h3>
+    <a href="#debut"><i class="fas fa-arrow-circle-down"></i></a>
+    <div class="fondrect"></div>
+    <div class="fondrond"></div>
+    <p> N'avons-nous pas tous rêvé d'avoir un assistant personnel à nos côtés qui s'adapterait à nos envies et à nos habitudes ? De Samantha, le système d'exploitation intelligent du film Her,
+        à Jarvis, l'assistant informatique d'Iron Man, l'intelligence artificielle est un sujet qui suscite de plus en plus d'attention au fur et à mesure des avancées technologiques !
+        Voitures autonomes, assistants vocaux, ou encore armes automatisées, l'intelligence artificielle permet de développer de nombreux domaines et en fait rêver plus d'un !
+        Mais à l'heure où les progrès technologiques permettent de plus en plus de choses, qu'en est-il des retombées pour l'environnement ?
+        Quels sont les problèmes causés par le développement et l'utilisation d'outils utilisant l'Intelligence Artificielle ? </p>
+    <p>Grâce à <strong>J.A.R.V.I.S</strong>, plongez-vous dans ce domaine qui fascine la planète entière, apprenez-en plus sur les inconvénients de cette nouvelle technologie et sur les solutions qui peuvent
+        exister pour contrer ces derniers ! </p>
+    <div class="ironman">
+        <img src="img/iron-man.jpg" alt="Article Iron Man">
+            <div class="carrenoirironman">
+                <div class="arrondi"><a href="homme_en_armure.html"><h3>Lire l'article</h3></a></div>
+            </div>
+        <p>L’histoire d’Iron Man, ce héros que tout le monde connaît ! </p>
+    </div>
+    <div class="probleme">
+        <img src="img/polution.jpg" alt="Article Polution Numérique">
+            <div class="carrenoirpolution">
+                <div class="arrondi"><a href="problemes_causes_par_ia.html"><h3>Lire l'article</h3></a></div>
+            </div>
+        <p>Quelles sont les problématiques liés à l’Intelligence Artificielle ? <br>Découvrez la pollution numérique.</p>
+    </div>
+    <div class="solutions">
+        <img src="img/nature.jpg" alt="Article Solutions">
+            <div class="carrenoirsolutions">
+                <div class="arrondi"><a href="solutions.html"><h3>Lire l'article</h3></a></div>
+            </div>
+        <p>Quelles sont les solutions pour contrer les aspects néfastes de la pollution numérique et comment changer cela en tant que consommateurs ?</p>
+    </div>
 </main>
 <footer>
     <div class="ligne">
