--- a/solutions.html
+++ b/solutions.html
@@ -32,7 +32,7 @@
             <li><a href="contact.html">Contact</a></li>
             <li><a href="autres_projets.html">Autres Projets</a></li>
         </ul>
-        <a href="http://mmimontbeliard.com/"><img class="mmi" src="img/MMi-logo.png" alt="Logo MMI Montbéliard"></a>
+        <a href="http://mmimontbeliard.com/" class="ammi"><img class="mmi" src="img/MMi-logo.png" alt="Logo MMI Montbéliard"></a>
     </nav>
 </header>
 <main>
