--- a/autres_projets.html
+++ b/autres_projets.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="autres_projets">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="css/mescss/layout.css"/>
     <link rel="stylesheet" href="css/mescss/menu.css"/>
     <link rel="stylesheet" href="css/mescss/headerfooter.css"/>
+    <link rel="stylesheet" href="css/mescss/carousel.css"/>
     <title>Autres Projets</title>
 </head>
 <body class=" ">
 <header>
     <div class="ligne"></div>
-    <a href=""><img class="logo" src="img/logo.png" alt="Logo du site"></a>
+    <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo du site"></a>
     <h1>J.A.R.V.I.S</h1>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
@@ -36,26 +37,58 @@
     </nav>
 </header>
 <main>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molest</p>
+    <h2 class="carre apropos" >à Propos</h2>
+    <p class="presentation">Je m'appelle Jonas, j'ai 17 ans <br>et je suis en première année <br>de DUT MMI (Métiers du Multimédia et de l'Internet) à Montbéliard. J'ai fait ce projet <br>dans le cadre d'un exercice pédagogique dans lié à ma formation !
+        Vous pouvez me contacter avec le bouton <br>ci-dessous : </p>
+    <img class="jonas" src="img/jonas.jpg" alt="Photo Jonas Morisot">
+    <div class="carrenoir"></div>
+        <h2 class="bouton"><a href="contact.html">Contacter</a></h2>
+        <h2 class="carre">Autres-Projets</h2>
+        <p class="decouverte">Découvrez les 11 autres projets ci-dessous :</p>
+    <section class="carousel">
+        <ul class="carousel-items">
+            <li class="carousel-item">
+                <a href=""><img src="img/projets/projet1.png" alt="Logo du projet de"></a>
+            </li>
+            <li class="carousel-item">
+                <a href=""></a><img src="img/projets/projet2.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet3.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet4.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet5.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet6.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet7.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet8.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet9.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet10.png" alt="Logo du projet de">
+            </li>
+            <li class="carousel-item">
+                <img src="img/projets/projet11.png" alt="Logo du projet de">
+            </li>
+        </ul>
+    </section>
 </main>
 <footer>
-    <div class="ligne">
-        <p>MORISOT <br>Jonas <br>B2</p>
-        <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
-        <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
-        <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
-    </div>
+    <div class="ligne"></div>
+    <p>MORISOT <br>Jonas <br>B2</p>
+    <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
+    <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
+    <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
 </footer>
 </body>
 </html>
