--- a/problemes_causes_par_ia.html
+++ b/problemes_causes_par_ia.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="problemesia">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -36,26 +36,91 @@
     </nav>
 </header>
 <main>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molest</p>
+    <img src="img/headerpolution.jpg" alt="Header Polution" class="headerpol">
+    <h2>Problèmes causés par l'intelligence artificielle </h2>
+    <h3>Introduction</h3>
+    <p>Avec le développement du numérique au fil des années, téléphones portables, ordinateurs, télévisions, montres connectées,
+        assistants virtuels (Alexa, Google Home) etc., de nombreuses questions environnementales peuvent se poser, à l’heure où le
+        réchauffement climatique est un sujet très important et dans toutes les bouches.</p>
+    <img src="img/polutioniceberg.png" alt="Graphisme Polution Iceberg" class="polution">
+    <div class="bordernoir"></div>
+    <h2>Que peut faire l'intelligence artificielle ?</h2>
+    <p>L’intelligence artificielle peut prendre énormément de formes, que nous croisons quotidiennement, comme la traduction automatique, la détection de virus, la
+        reconnaissance d’image, ou même les voitures connectées. Elle peut aussi réaliser des diagnostics médicaux, modérer des forums ou des réseaux sociaux, et même permettre à certains sites de vous faire des recommandations personnalisées et même créer des tableaux comme le faisait des artistes comme Vincent Van Gogh ou même Rembrandt. En
+        2016, Google à réussit à créer une IA nommée « Google Alpha Go » capable de battre des champions de Go (jeu de société originaire de Chine, qui oppose deux joueurs qui doivent prendre le plus de terrain sur un plateau en bois). En effet, en 3 jours, elle a réussi à
+        apprendre les règles du jeu, et à force de jouer face à eux, à devenir une experte de ce jeu de stratégie.</p>
+    <img src="img/alphago.jpg" alt="Illustration du jeu de go" class="alphago">
+    <div class="bordernoir2"></div>
+    <h2 class="titre3">Les problèmes causés par l’intelligence artificielle </h2>
+    <p>À l’heure où l’intelligence artificielle est un domaine plus si futuriste que ça, des scientifiques commencent à se poser des questions et à faire des enquêtes pour savoir quels coûts environnementaux elle va engendrer.
+        <br>
+        <br>
+        Il faut d’abord savoir que l’intelligence artificielle se base sur un mécanisme appelé le « Deep Learning »,
+        une méthode s’inspirant du cerveau humain, qui lui permet d’apprendre en fonction de ses erreurs. Pour
+        en savoir plus, vous pouvez lire l’article scientifique qui se trouve à la fin de cet article. Entraîner un algorithme afin qu’il devienne intelligent, en utilisant la méthode décrite ci-dessus, avec le matériel complexe qui lui est nécessaire pendant 4 à 7 jours, consomme plusieurs centaines de milliers de Kg de CO2, l’équivalent de la consommation en CO2 d’une personne d’une cinquantaine d’années, ou même que 5 voitures pendant leur durée de vie.
+        <br>
+        <br>
+        Avec l’avancée des technologies qui n’est pas prête de s’arrêter, on peut s’attendre à ce que le bilan environnementale continue de s’aggraver, ce qui va continuer d’amplifier les soucis climatiques déjà présents, et qui doivent, pour le bien de tous, déjà diminuer dans les prochaines années.</p>
+    <h2 class="bouton"><a href="solutions.html">Lire l'article sur les solutions</a></h2>
+    <div class="carrerouge"></div>
+    <div class="rondrouge"></div>
+    <div class="artsci">
+    <h2>Article scientifique </h2>
+    <p class="introasc">Ceci est un extrait d'un article scientifique, l'article entier en PDF se trouve à la fin de cet extrait !</p>
+    <h3 class="articlesc">4. Des neuronnes et des données</h3>
+    <p>Les cas d’usage sont aujourd’hui innombrables et les exemples qui suivent ne sont que des illustrations de quelques-unes des grandes familles de réseaux de neurones.</p>
+    <h3 class="articlesc">4.1 réseaux de neurones complètement connectés</h3>
+    <p>Le plus simple des réseaux de neurones profonds est celui où chaque entrée est connectée à un neurone.
+        Un exemple classique est la classification de chiffres manuscrits issus de la base MNIST [15], composée de 70 000 images de chiffres. Dans notre exemple,
+        60 000 images servent à l’apprentissage, 10 000 à la validation4 . Chaque pixel correspond à un neurone de la couche d’entrée :</p>
+    <img src="img/AS-1.PNG" alt="Schéma réseau connecté" class="AS1">
+    <h4 class="imgas1">Figure 8 - Entrées d'un réseau complètement connecté</h4>
+    <p>Les images sont en noir et blanc et comportent 28x28 pixels. Elles sont vues comme de simples matrices. Ces dernières sont transformées en vecteurs (colonne par colonne ou ligne par ligne)
+        et le vecteur est pris comme entrée du réseau. La couche d’entrée comporte donc 28x28=784 neurones. <br>Celle-ci est entièrement connectée avec des couches cachées et une couche de sortie :</p>
+    <img src="img/AS-2.PNG" alt="Schéma sorties réseau classifieur" class="AS2">
+    <h4 class="imgas2">Figure 9 - Sorties d'un réseau classifieur</h4>
+    <p>Dans le cas d’un réseau classifieur, chaque classe est représentée par un neurone au niveau de la couche de sortie. La valeur produite par ces neurones est normalisée via une fonction softmax.
+        Le résultat final est interprété comme la probabilité d’appartenance à chaque classe.
+        <br> <br>
+        Les données sont séparées en deux sous-ensembles : train et test. L’apprentissage se fait par itération avec le corpus train. Chaque itération est appelée une époque (epoch) ou un épisode.
+        L’évaluation (validation) est effectuée avec le second corpus, test. Les courbes de la précision (accuracy) et de la fonction de perte (loss) permettent de suivre la progression de l’apprentissage :
+    </p>
+    <img src="img/AS-3.PNG" alt="Schéma courbes d'apprentissage" class="AS3">
+    <h4 class="imgas3">Figure 10 - Courbes d'apprentissage</h4>
+    <p>Au-delà d’une certaine durée d’apprentissage, on peut observer que la précision continue de progresser avec le corpus d’apprentissage tandis qu’elle stagne ou se met à
+        régresser avec le corpus de test. On parle alors de sur-apprentissage (overfitting).
+        <br>Dans notre exemple, nous obtenons une précision globale de 97,7 %. Celle-ci peut être analysée plus finement en visualisant la matrice de confusion :</p>
+    <img src="img/AS-4.PNG" alt="Schéma matrice de confusion" class="AS4">
+    <h4 class="imgas4">Figure 11 - Matrice de confusion</h4>
+    <h3 class="articlesc">4.2 réseaux convolutifs (cnn)</h3>
+    <p>Disposer d’un neurone d’entrée pour chaque pixel est faisable tant que le nombre de pixels reste limité. Avec des images de grande dimension ce n’est plus possible.
+        L’utilisation de réseaux convolutifs permet de répondre à cette problématique, tout en apportant une bien meilleure précision. Le principe de la convolution est de construire
+        une nouvelle image, appelée couche de convolution, où chaque pixel est construit à partir des pixels environnants :
+    </p>
+    <img src="img/AS-5.PNG" alt="Schéma convolution 2D" class="AS5">
+    <h4 class="imgas5">Figure 12 - Convolution 2D</h4>
+    <p>On balaye notre image en calculant la somme d’une portion de l’image pondérée par
+        les éléments d’un noyau (kernel).
+        <br><br>
+        Soit : <img src="img/AS-6.PNG" alt="Calcul dimension du kernel" class="AS6">
+        <br>
+        Ce principe peut être étendu avec des images possédant plusieurs canaux, par exemple RVB. Dans ce cas les kernels sont de dimension >2.
+    </p>
+    <img src="img/AS-7.PNG" alt="Schéma convolution 3D" class="AS7">
+    <h4 class="imgas7">Figure 13 - Convolution 3D</h4>
+    <p>On effectue une succession de convolutions et de pooling, le pooling consistant à réduire la dimension des couches de convolution. Les couches terminales sont aplanies puis connectées à un réseau dense
+        « classique ».</p>
+    <img src="img/AS-8.PNG" alt="Schéma réseau convolutif" class="AS8">
+    <h4 class="imgas8">Figure 14 - Principe d'un réseau convolutif (CNN)</h4>
+    <h2 class="bouton2"><a href="./ressources/article-scientifique.pdf">Télécharger l'article complet</a></h2>
+    </div>
 </main>
 <footer>
-    <div class="ligne">
+    <div class="ligne"></div>
         <p>MORISOT <br>Jonas <br>B2</p>
         <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
         <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
         <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
-    </div>
 </footer>
 </body>
 </html>
