--- a/solutions.html
+++ b/solutions.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="solution">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -36,26 +36,45 @@
     </nav>
 </header>
 <main>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molest</p>
+    <div class="carrerouge"></div>
+    <div class="rondrouge"></div>
+    <img src="img/headernature.jpg" alt="Header Nature">
+    <h2>Solutions face à la <br> pollution numérique</h2>
+    <h3>Introduction</h3>
+    <p>Avec l’arrivée de nouvelles technologies, dont l’intelligence artificielle, de nouveaux problèmes sont mis en avant par les chercheurs <br>et les scientifiques.
+        <br>Parmi eux, la pollution numérique, qui commence déjà à peser sur l’environnement. Que peut-on faire pour limiter les impacts environnementaux ?
+        Est-il possible pour nous, simples consommateurs, de contribuer à cette limitation ?</p>
+    <img src="img/polutioniceberg.png" alt="Graphisme Polution Iceberg" class="polution">
+    <div class="bordernoir"></div>
+    <h4>Exemple de consommation à l'heure du numérique</h4>
+    <h2>Quelles solutions pour empêcher la pollution numérique ?</h2>
+    <p class="p2">Il existe plusieurs solutions pour réduire la pollution numérique en général, comme allonger au maximum la durée de vie de nos équipements,
+        c’est-à-dire de les utiliser tant qu’ils marchent et non pas changer dès qu’un nouvel équipement sort, débrancher sa box en dehors de son utilisation,
+        ainsi que de ne pas laisser d’ordinateurs allumés lorsque qu’on ne l’utilise pas également, ces deux derniers consommant énormément.
+        On peut également penser à privilégier le stockage local au stockage sur le cloud, cela économise toute l’énergie nécessaire aux informations pour naviguer
+        entre les deux ainsi que de vider sa boîte mail, qui permet d’alléger les data centers. Ce qui consomme également énormément, et ce que nous utilisons tous très fréquemment,
+        ce sont les vidéos en ligne (YouTube, Netflix …). Pour limiter la pollution numérique en continuant de regarder des vidéos, voici quelques conseils :
+    </p>
+    <p class="p3">- Utiliser le WIFI plutôt que la 4G, cette dernière consomme 23 fois plus que le WIFI !
+        - Visionner les vidéos en basses définitions.
+        - Désactivez la lecture automatique sur les réseaux sociaux
+        - Télécharger plutôt qu’utiliser le streaming !   Écouter sa musique sur une plateforme de streaming audio est meilleur que regarder un clip sur YouTube par exemple. Il faut également privilégier la télévision en TNT plutôt qu’avec l’ADSL … Le contraire de ce qui est recommandé par les publicités !
+    </p>
+    <img src="img/ordinateureteint.jpg" alt="Image ordinateur éteint">
+    <div class="bordernoir2"></div>
+    <p>Pour rebondir sur les publicités, les entreprises peuvent aussi réduire leurs pollutions numériques, en simplifiant leurs conceptions, en retirant ce qu’on appelle le <br>« gras numérique ». (Les informations dont l’utilisateur n’a pas forcément besoin, qui ne sont donc
+        pas utiles, mais prennent quand même de la place.)
+        <br> <br>
+        Ce sujet vous intéresse et vous souhaitez en apprendre plus sur la pollution numérique d’approches différentes ? N’hésitez pas à consulter les autres projets en cliquant <br>sur le bouton ci-dessous.
+    </p>
+    <h2 class="bouton"><a href="autres_projets.html">Voir les autres projets</a></h2>
 </main>
 <footer>
-    <div class="ligne">
-        <p>MORISOT <br>Jonas <br>B2</p>
-        <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
-        <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
-        <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
-    </div>
+    <div class="ligne"></div>
+    <p>MORISOT <br>Jonas <br>B2</p>
+    <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
+    <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
+    <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
 </footer>
 </body>
 </html>
