--- a/homme_en_armure.html
+++ b/homme_en_armure.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="hommeenarmure">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/mescss/layout.css"/>
     <link rel="stylesheet" href="css/mescss/menu.css"/>
     <link rel="stylesheet" href="css/mescss/headerfooter.css"/>
+    <link rel="stylesheet" href="css/mescss/carousel.css"/>
     <title>Homme en armure</title>
 </head>
 <body class=" ">
@@ -36,26 +37,70 @@
     </nav>
 </header>
 <main>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molestias mollitia officiis placeat quia quidem similique ullam voluptatibus. Odit, recusandae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio eaque impedit mollitia nam perferendis quae quam quisquam sed. A aliquam dignissimos
-        iusto perspiciatis porro quod quos, ratione reiciendis sunt tempora?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, amet at
-        consequatur dolore eaque, et exercitationem, id laudantium molest</p>
+    <div class="carrerouge"></div>
+    <div class="rondrouge"></div>
+    <img src="img/headerironman.jpg" alt="Header Iron Man" class="headerim">
+    <h2>L'homme en armure</h2>
+    <h3>Introduction</h3>
+    <p>Iron Man … Grâce à ses comics, ses trois films éponymes ou encore ses nombreuses apparitions dans les autres films de la franchise, il est devenu un héros incontournable de
+        cette dernière, connu des plus petits comme des plus grands et interprété par Robert Downey Jr.</p>
+    <img src="img/RobertDowneyJr.jpg" alt="Photo de Robert Downey Jr" class="imgRDJr">
+    <div class="bordernoir"></div>
+    <h2 class="titre2">Création du personnage d'Iron Man</h2>
+    <p class="p2">Le personnage d’Iron Man est un <br>super-héros imaginé et créé par Stan Lee, développé par Larry Lieber et dessiné par Don Heck. Sa première apparition se fait dans un comic de Marvel
+        en 1963, et il obtient son propre comic en 1968, qui sera publié jusqu’en 1996 par l’éditeur.</p>
+    <blockquote>« Je me suis lancé un défi. À l'époque, c'était l'apogée de la guerre et les lecteurs, les jeunes lecteurs détestaient l'armée et la guerre, alors j'ai créé un héros qui la
+        représentait au centième degré […] Et il est devenu extrêmement populaire. »</blockquote>
+    <p class="p3">Iron Man, comme beaucoup d’héros à cette époque, a été créé dans un contexte de guerre froide opposant les États-Unis et ses alliés face à l’URSS et leurs propres alliés. C’est pourquoi,
+        lors des premiers numéros, on pouvait voir Iron Man se battre face à des communistes. Le personnage de Tony Stark, milliardaire et fabriquant d’armes, participait pleinement à la
+        propagande face à l’URSS. Douze ans après l’arrêt de publication des comics Iron-Man, le héros est adapté au cinéma, avec la sortie du premier des trois films Iron Man en 2008, qui
+        marquera également le lancement du première acte de l’Univers Cinématographique Marvel (MCU).</p>
+    <img src="img/StanLee.jpg" alt="Photo de Stan Lee" class="stanlee">
+    <div class="bordernoir2"></div>
+    <h4 class="stanleest">Stan Lee, créateur de nombreux héros <br>de la franchise Marvel, <br>comme Spider Man, Docteur Strange, <br>Hulk, Thor et de nombreux autres.</h4>
+    <h2>L'histoire d'Iron Man</h2>
+    <p class="p4">Tony Stark est un riche homme d’affaires américain héritier de Stark Industries, entreprise d’armement militaire léguée par son père, Howard Stark, qui distribue des armes à
+        l’armée américaine. En déplacement en Afghanistan, alors qu’il présente sa dernière invention, un très puissant missile du nom de Jéricho, il est enlevé après une attaque à la bombe
+        sur sa voiture par une organisation de terroristes nommée « Les Dix Anneaux ». Il est gravement blessé lorsqu’il se réveille, avec un électro-aimant, implanté par le professeur Yinsen
+        et alimenté par une batterie de voiture pour éviter à des éclats d’obus d’atteindre son cœur et qui permet de le maintenir en vie. Avec l’aide du professeur, il créé une armure autour
+        d’un réacteur miniaturisé, devant la surveillance des terroristes qui veulent que Stark reproduise son missile, et parvient à s’échapper. De retour après plusieurs mois de captivité,
+        il décide d’arrêter la fabrication d’armes, et se met à créer une nouvelle armure, la sienne s’étant détruite lors de la fuite, afin de dissoudre le groupe de terroriste.</p>
+    <video controls src='video/iron-man-trailer.mp4' type='video/mp4'></video>
+    <h4 class="trailer">Trailer du film Iron Man</h4>
+    <h2>Iron Man et l'intelligence artificielle</h2>
+    <p class="p5">L’univers cinématographique Marvel est rempli de Super-Héros, mais également de technologies… armes, inventions diverses et variées, mais aborde également l'Intelligence Artificielle.
+        C’est le cas de JARVIS, l’assistant informatique de Tony Stark (Iron Man), qui est une intelligence artificielle développée par le héros pour l’assister dans la majorité de ces travaux.
+        Son nom est hommage à Edwin Jarvis, le majordome d’Howard Stark, son père. JARVIS apparaît dans les trois films Iron Man, ainsi que dans Avengers, Avengers : L’Ère d’Ultron
+        (dont le film parle du combat entre JARVIS et une autre intelligence artificielle du nom d’Ultron), ainsi que dans Avengers : Endgame (où on le voit apparaître sous forme humaine au
+        coté d’Howard Stark). JARVIS est un élément très important du MCU.</p>
+    <img src="img/JARVIS.png" alt="J.A.R.V.I.S, l'IA d'Iron Man" class="JARVIS">
+    <div class="bordernoir3"></div>
+    <p>L’intelligence Artificielle fait souvent forme de fantasme pour de nombreuses personnes, mais elle est peut-être notamment dangereuse, à cause de son auto apprentissage
+        (appelé « Deep Learning »), ou alors de la pollution qu’elle cause. <br>C’est ce dernier point que nous étudieront dans le prochain article.</p>
+    <h2 class="bouton"><a href="problemes_causes_par_ia.html">Lire l'article sur les problèmes causés par l'IA</a></h2>
+    <h2 class="films">Ces films peuvent vous intérésser</h2>
+    <section class="carousel">
+        <ul class="carousel-items">
+            <li class="carousel-item">
+                <img src="img/affichehulk.jpg" alt="Affiche du film Hulk">
+            </li>
+            <li class="carousel-item">
+                <img src="img/affichetor.jpg" alt="Affiche du film Thor">
+            </li>
+            <li class="carousel-item">
+                <img src="img/affichecaptainamerica.png" alt="Affiche du film Captain America">
+            </li>
+            <li class="carousel-item">
+                <img src="img/afficheavengers.png" alt="Affiche du film Avengers">
+        </ul>
+    </section>
 </main>
 <footer>
-    <div class="ligne">
-        <p>MORISOT <br>Jonas <br>B2</p>
-        <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
-        <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
-        <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
-    </div>
+    <div class="ligne"></div>
+    <p>MORISOT <br>Jonas <br>B2</p>
+    <p>Projet réalisé dans le cadre d'un<br>exercice pédagogique au département<br><a href="http://mmimontbeliard.com/" target="_blank">MMI Montbéliard</a></p>
+    <a href="mailto:milanmorisot@gmail.com" target="_blank" class="gmail"><img src="img/gmail.png" alt="Icône Gmail"></a>
+    <a href="http://mmimontbeliard.com/" target="_blank" class="mmilogofooter"><img src="img/MMi-logo.png" alt="Icône MMI Montbéliard"></a>
 </footer>
 </body>
 </html>
